[tool.poetry]
name = "sarada"
version = "0.1.0"
description = ""
authors = ["Wiktor <wikii122@gmail.com>"]

[tool.black]
include = ["src", "tests"]

[tool.pylint.basic]
const-naming-style = "snake_case"
disable = ["E501"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
allow_untyped_globals = false
check_untyped_defs = true
disallow_any_explicit = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "hypothesis",
    "hypothesis.*"
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]

[tool.poetry.dependencies]
python = "3.9.6"
music21 = "^7.1.0"
loguru = "^0.5.3"
numpy = "^1.21.4"
keras = "^2.7.0"
tensorflow = "^2.7.0"
better-exceptions = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
hypothesis = "^6.24.5"
black = {version = "^21.11b1", allow-prereleases = true}
mypy = "^0.910"
bandit = "^1.7.1"
ipython = "^7.29.0"
ipdb = "^0.13.9"
pre-commit = "^2.15.0"
isort = "^5.10.1"
pylint = "^2.11.1"
prospector = "^1.5.1"
pytest-mypy = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
